// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";


package pusModelEditor.protobuf;

message Pus014ForwardedPacket {
extensions 26 to 126;

  optional ccsds_mal.protobuf.UINTEGER packetApid = 1;
  optional ccsds_mal.protobuf.UINTEGER forwardingStatusTypeSubtype = 2;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeFwdStatusTypeSubtype = 3;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeFwdStatusTypeSubtype = 4;
  optional ccsds_mal.protobuf.STRING packetApidName = 5;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 6;
  optional ccsds_mal.protobuf.STRING packetName = 7;
  optional ccsds_mal.protobuf.STRING serviceApidName = 8;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeRid = 9;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeRid = 10;
  optional ccsds_mal.protobuf.UINTEGER rid = 11;
  optional ccsds_mal.protobuf.STRING ridLabel = 12;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeSid = 13;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeSid = 14;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeSubSamplingRatio = 15;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeSubSamplingRatio = 16;
  optional ccsds_mal.protobuf.UINTEGER subsamplingRatio = 17;
  optional ccsds_mal.protobuf.UINTEGER sid = 18;
  optional ccsds_mal.protobuf.STRING sidLabel = 19;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeTypeSubType = 20;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeTypeSubType = 21;
  optional ccsds_mal.protobuf.UINTEGER serviceType = 22;
  optional ccsds_mal.protobuf.UINTEGER serviceSubType = 23;
  optional ccsds_mal.protobuf.ULONG uniqueId = 24;
  optional ccsds_mal.protobuf.UINTEGER status = 25;
}
